displau mudado pra flex em linha 105

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -102,6 +102,9 @@ a:hover{
 
 /*Corpo gerencia*/
 .corpo-gerencia{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     width: 30%;
     margin:60px auto;
 }
