--- a/css/estilo.css
+++ b/css/estilo.css
@@ -20,7 +20,9 @@ body{
 .conteudo{
     width: 70%;
     margin: 0 auto;
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .centralizar{
     display: block;
