--- a/css/estilo.css
+++ b/css/estilo.css
@@ -68,7 +68,7 @@ body{
     
 }
 .icone:hover{
-    border: white solid 4px;
+    /* border: white solid 1px; */
     opacity:1 ;
 }
 .icone,#link-gerencia{
