mudanças finais de elementos

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -29,7 +29,6 @@ body{
     align-items: center;
     justify-content: center;
 }
-
 #titulo{
     display: flex;
     justify-content: center;
@@ -46,15 +45,24 @@ body{
 .corpo-icone{
     display: flex;
     position: relative;
+    justify-content: center;
+    flex-wrap:wrap;
     top: 40px; transition:0.5s all ;
+    flex-shrink: 6px;
 }
-
-
-.icone{ 
-    display: block;
-    border-radius: 3px;
-    margin: 15px;
-    
+.estrutura-icone{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 8px 12px;
+}
+.estrutura-icone img{ 
+    width:140px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-shrink: 2px;
+    border-radius: 6px;
+    min-width: 40px;
 }
 .icone:hover{
     /* border: white solid 1px; */
@@ -68,17 +76,15 @@ body{
     -webkit-transform: scale(1.05);
     transform: scale(1.05);
 }
-
 #txt-titulo{
    color: #fff;
-   display: block;
-   text-align: center;
+   display: flex;
+   justify-content: center;
    font-size: 18px;
    font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;  
    text-transform: uppercase;
-}
-.limpar{
-    clear: both;
+   position: relative;
+   top: 8px;
 }
 
 /*Formatando link*/
@@ -92,11 +98,11 @@ a:link{
 a:hover{
     opacity: 1;
 }
-#link-icone a:link, a:visited{
+.link-icone a:link, a:visited{
     text-decoration: none;
     color: #fff;
+   
 }
-
 
 /*Corpo gerencia*/
 .corpo-gerencia{
