--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,9 +1,10 @@
 *{
     margin: 0 ;
     padding: 0;
+    font-family:"Netflix Sans", 'Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 body{
-    background-color: #0a0a0a;
+    background-color:rgba(0, 0, 0,0.9);
 }
 .container{
     width: 100%;
@@ -11,6 +12,7 @@ body{
 .topo{
     position: absolute; 
     left: 40px;
+    background-color: black;
 }
 .imagem-topo img{
     width: 116px;
@@ -34,20 +36,21 @@ body{
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: row;
-    width: 100%;
     color: #fff;
-    font-size:3.0vw;
-    line-height: 3px ;
-    font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;
-    margin-top:100px;
+    font-weight: 600;
+    font-size:3.4vw;
     text-align: center;
+    width: 100%;
+    margin-top:70pt;
+    
 }
 .corpo-icone{
     display: flex;
     position: relative;
     justify-content: center;
     flex-wrap:wrap;
-    top: 40px; transition:0.5s all ;
+    top: 20px;
+    transition:0.5s all ;
     flex-shrink: 6px;
 }
 .estrutura-icone{
@@ -57,7 +60,7 @@ body{
     margin: 8px 12px;
 }
 .estrutura-icone img{ 
-    width:140px;
+    width:150px;
     display: flex;
     flex-wrap: wrap;
     flex-shrink: 2px;
@@ -82,11 +85,9 @@ body{
    justify-content: center;
    font-size: 18px;
    font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;  
-   text-transform: uppercase;
    position: relative;
-   top: 8px;
+   top: 10px;
 }
-
 /*Formatando link*/
 a{
     text-decoration: none;
@@ -106,40 +107,36 @@ a:hover{
 
 /*Corpo gerencia*/
 .corpo-gerencia{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 30%;
-    margin:60px auto;
+    display: block;
+    width: 100%;
+    position: relative;
+    top:100px;
 }
 
 #link-gerencia{
+    display: flex;
+    justify-content: center;
     border: #fff solid 1px;
-    padding: 10px;
     text-align: center;
-    font-size: 18px;
-    width: 80%;
+    letter-spacing: 2px;
+    font-size: 16px; 
+    padding: 8px 20px;   
+    width: 12%;
     margin: 0 auto;
     transition: 1s all;
-    
-    
+    font-weight: 700;
 }
 #link-gerencia:hover{
     transform: scale(1.1);
     transition-duration:1s;
-    border-radius: 12px;
     
 }
 .marca-dagua{
-   opacity: 0.3;
-   display: block;
-   width: 30%;
-   margin-left: 20px;
-   margin-top: 50px;
+    position: fixed;
+    left: 10px;
+    bottom: 10px;
+    opacity: 0.3;
+    color: #fff;
 }
 
-#marca{
-    
-    color: #fff; 
-    font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;
-}
+
